--- a/public/index.html
+++ b/public/index.html
@@ -14,10 +14,14 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   
     <title>React App</title>
+    <meta name="google-site-verification" content="fM0O9U7rfSK9KVXdJ6RmVrXXb3TC-e6Mzm0X6uyXpp4" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
- 
+    
+    <!-- Cloudflare Web Analytics -->
+      <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "a6bc09bb6cc04420afa0d00a29c7bcb2"}'></script>
+    <!-- End Cloudflare Web Analytics -->
   </body>
 </html>
