added temp contents

--- a/public/index.html
+++ b/public/index.html
@@ -10,19 +10,19 @@
 
       gtag('config', 'G-CMDCFGJFK1');
     </script>
+    
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/TheWeddingGallery.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="description" content="The Wedding Gallery"/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    
+    <meta name="p:domain_verify" content="93348a1bb191338879e48f3d746b850b"/>
+    <meta name="author" content="Reyan John Narvaja" />
+
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   
-    <title>React App</title>
+    <title>The Wedding Gallery</title>
     <meta name="google-site-verification" content="fM0O9U7rfSK9KVXdJ6RmVrXXb3TC-e6Mzm0X6uyXpp4" />
   </head>
   <body>
