added banner and NavLinks

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,10 @@
     <meta name="author" content="Reyan John Narvaja" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300&display=swap" rel="stylesheet">
+      
     <title>The Wedding Gallery</title>
     <meta name="google-site-verification" content="fM0O9U7rfSK9KVXdJ6RmVrXXb3TC-e6Mzm0X6uyXpp4" />
   </head>
