testing helmet functions

--- a/public/index.html
+++ b/public/index.html
@@ -15,10 +15,10 @@
     <link rel="icon" href="%PUBLIC_URL%/TheWeddingGallery.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="The Wedding Gallery"/>
+    <!-- <meta name="description" content="The Wedding Gallery"/> -->
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <meta name="p:domain_verify" content="93348a1bb191338879e48f3d746b850b"/>
-    <meta name="author" content="Reyan John Narvaja" />
+    <!-- <meta name="author" content="Reyan John Narvaja" /> -->
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
@@ -29,7 +29,7 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300&family=Oswald:wght@200;300;400&family=Sassy+Frass&display=swap" rel="stylesheet">
 
-    <title>The Wedding Gallery</title>
+    <!-- <title>The Wedding Gallery</title> -->
     <meta name="google-site-verification" content="fM0O9U7rfSK9KVXdJ6RmVrXXb3TC-e6Mzm0X6uyXpp4" />
   </head>
   <body>
